Overflow fixed

--- a/src/pages/productDetails/productDetailsMobile/productDetailsMobile.scss
+++ b/src/pages/productDetails/productDetailsMobile/productDetailsMobile.scss
@@ -104,7 +104,6 @@
         display: flex;
         flex-direction: column;
         margin-left: -10px;
-        margin-right: -10px;
         margin-top: 0 !important;
         padding-bottom: 10px !important;
     }
